src/objects/c2g__InquiryTemplateColumn__c.object
<CustomObject>
    <description>Stores details of a column that has been added to an inquiry template.</description>
    <fields>
        <fullName>c2g__CalculateFormulaOnSummary__c</fullName>
        <defaultValue>true</defaultValue>
        <label>(Deprecated)Reapply Formula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__ColumnWidth__c</fullName>
        <label>Column Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ConditionFalseFillColor__c</fullName>
        <label>Positive Fill Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ConditionFalseTextColor__c</fullName>
        <label>Positive Fill Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ConditionToValue__c</fullName>
        <label>Condition To Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ConditionTrueFillColor__c</fullName>
        <label>Positive Fill Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ConditionTrueTextColor__c</fullName>
        <label>Positive Fill Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ConditionValue__c</fullName>
        <label>Condition Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Condition__c</fullName>
        <label>Condition</label>
        <picklist>
            <picklistValues>
                <fullName>=</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;&gt;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;=</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;=</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>contains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>does not contain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>starts with</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>in range</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>not in range</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__DataViewField__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Field</label>
        <referenceTo>c2g__DataViewField__c</referenceTo>
        <relationshipLabel>Inquiry Template Columns</relationshipLabel>
        <relationshipName>InquiryTemplateColumns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DecimalPlaces__c</fullName>
        <label>Decimal Places</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DisplayOrder__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DrillInquiryTemplate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Drill Inquiry Template</label>
        <referenceTo>c2g__InquiryTemplate__c</referenceTo>
        <relationshipLabel>Drill Inquiry Template Columns</relationshipLabel>
        <relationshipName>DrillInquiryTemplateColumns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__FormulaDp__c</fullName>
        <label>Formula Decimal Places</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Formula__c</fullName>
        <label>Formula (deprecated - do not remove)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__InquiryTemplate__c</fullName>
        <label>Inquiry Template</label>
        <referenceTo>c2g__InquiryTemplate__c</referenceTo>
        <relationshipLabel>Inquiry Template Columns</relationshipLabel>
        <relationshipName>InquiryTemplateColumns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__Mode__c</fullName>
        <label>Mode</label>
        <picklist>
            <picklistValues>
                <fullName>NONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COUNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__NegativeFillColor__c</fullName>
        <label>Negative Fill Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__NegativeNumberFormat__c</fullName>
        <label>Negative Number Format</label>
        <picklist>
            <picklistValues>
                <fullName>Parenthesis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Unsigned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__NegativeTextColor__c</fullName>
        <label>Negative Text Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PositiveFillColor__c</fullName>
        <label>Positive Fill Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PositiveTextColor__c</fullName>
        <label>Positive Text Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Scaling__c</fullName>
        <label>Scaling</label>
        <picklist>
            <picklistValues>
                <fullName>Scale to Nearest Thousand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scale to Nearest Million</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__ShowNumberSeparators__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Separators</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__ShowSummary__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Total This Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Field</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Formula</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Count</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__ValueType__c</fullName>
        <label>Value Type</label>
        <picklist>
            <picklistValues>
                <fullName>NotNumber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Inquiry Template Column</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inquiry Template Columns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>